--- a/inventory/group_vars/zabbix_server/version.yaml
+++ b/inventory/group_vars/zabbix_server/version.yaml
@@ -1,4 +1,5 @@
 ---
 zabbix_server_version: "{{ zabbix_version_info }}"
 zabbix_web_version: "{{ zabbix_version_info }}"
+zabbix_javagateway_version: "{{ zabbix_version_info }}"
 zabbix_agent_version: "{{ zabbix_version_info }}"
